# rag_model-

./: README.md  pyproject.toml  requrinment.txt
notebook/: document.ipynb  rag_pipeline.ipynb
