[project]
name = "rag-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "uv>=0.11.21",
]
